// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selectable Pill should render a selectable pill 1`] = `
<InjectIntl(SelectablePills)
  ariaLabel="Example of a Selectable Pill"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  onSelect={[Function]}
>
  <SelectablePills
    ariaLabel="Example of a Selectable Pill"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={false}
    onSelect={[Function]}
  >
    <ResponsiveElement
      onResize={[Function]}
      responsiveTo="window"
    >
      <div
        aria-describedby="terra-pills-group-interaction-hint"
        aria-label="Example of a Selectable Pill"
        className="pills-group"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="list"
        tabIndex="-1"
      >
        <VisuallyHiddenText
          aria-hidden="true"
          id="terra-pills-group-interaction-hint"
          text=", Terra.pills.hint.pillList
"
        >
          <span
            aria-hidden="true"
            className="visually-hidden-text"
            id="terra-pills-group-interaction-hint"
          >
            , Terra.pills.hint.pillList

          </span>
        </VisuallyHiddenText>
        <InjectIntl(Pill)
          id="selectabla-pill"
          isBasicPill={false}
          key=".0"
          label="Selectable Pill"
          onRemove={[Function]}
          onSelect={[Function]}
        >
          <Pill
            id="selectabla-pill"
            intl={
              Object {
                "defaultFormats": Object {},
                "defaultLocale": "en",
                "formatDate": [Function],
                "formatHTMLMessage": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelative": [Function],
                "formatTime": [Function],
                "formats": Object {},
                "formatters": Object {
                  "getDateTimeFormat": [Function],
                  "getMessageFormat": [Function],
                  "getNumberFormat": [Function],
                  "getPluralFormat": [Function],
                  "getRelativeFormat": [Function],
                },
                "locale": "en",
                "messages": null,
                "now": [Function],
                "onError": [Function],
                "textComponent": "span",
                "timeZone": null,
              }
            }
            isBasicPill={false}
            label="Selectable Pill"
            onRemove={[Function]}
            onSelect={[Function]}
          >
            <ResponsiveElement
              onResize={[Function]}
              responsiveTo="window"
            >
              <div
                className="pill-list-item"
                role="listitem"
              >
                <button
                  aria-haspopup="dialog"
                  className="pill is-focusable is-selectable"
                  data-terra-pill={true}
                  data-terra-pills-show-focus-styles={true}
                  id="selectabla-pill"
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onMouseDown={[Function]}
                  tabIndex="0"
                  type="button"
                >
                  <span
                    className="pill-label"
                  >
                    Selectable Pill
                  </span>
                  <VisuallyHiddenText
                    text=", Terra.pills.hint.selectable"
                  >
                    <span
                      className="visually-hidden-text"
                    >
                      , Terra.pills.hint.selectable
                    </span>
                  </VisuallyHiddenText>
                </button>
              </div>
            </ResponsiveElement>
          </Pill>
        </InjectIntl(Pill)>
      </div>
    </ResponsiveElement>
  </SelectablePills>
</InjectIntl(SelectablePills)>
`;

exports[`Selectable Pill should render a selectable pill with roll up 1`] = `
<InjectIntl(SelectablePills)
  ariaLabel="Example of a Selectable Pill"
  intl={
    Object {
      "defaultFormats": Object {},
      "defaultLocale": "en",
      "formatDate": [Function],
      "formatHTMLMessage": [Function],
      "formatMessage": [Function],
      "formatNumber": [Function],
      "formatPlural": [Function],
      "formatRelative": [Function],
      "formatTime": [Function],
      "formats": Object {},
      "formatters": Object {
        "getDateTimeFormat": [Function],
        "getMessageFormat": [Function],
        "getNumberFormat": [Function],
        "getPluralFormat": [Function],
        "getRelativeFormat": [Function],
      },
      "locale": "en",
      "messages": null,
      "now": [Function],
      "onError": [Function],
      "textComponent": "span",
      "timeZone": null,
    }
  }
  isSingleLine={true}
  onSelect={[Function]}
>
  <SelectablePills
    ariaLabel="Example of a Selectable Pill"
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": null,
        "now": [Function],
        "onError": [Function],
        "textComponent": "span",
        "timeZone": null,
      }
    }
    isSingleLine={true}
    onSelect={[Function]}
  >
    <ResponsiveElement
      onResize={[Function]}
      responsiveTo="window"
    >
      <div
        aria-describedby="terra-pills-group-interaction-hint"
        aria-label="Example of a Selectable Pill"
        className="pills-group"
        onBlur={[Function]}
        onKeyDown={[Function]}
        role="list"
        tabIndex="-1"
      >
        <VisuallyHiddenText
          aria-hidden="true"
          id="terra-pills-group-interaction-hint"
          text=", Terra.pills.hint.pillList
"
        >
          <span
            aria-hidden="true"
            className="visually-hidden-text"
            id="terra-pills-group-interaction-hint"
          >
            , Terra.pills.hint.pillList

          </span>
        </VisuallyHiddenText>
        <InjectIntl(RollUpPill)
          isSingleLine={true}
          onSelectRollUp={[Function]}
          rollupCount={1}
        >
          <RollUpPill
            intl={
              Object {
                "defaultFormats": Object {},
                "defaultLocale": "en",
                "formatDate": [Function],
                "formatHTMLMessage": [Function],
                "formatMessage": [Function],
                "formatNumber": [Function],
                "formatPlural": [Function],
                "formatRelative": [Function],
                "formatTime": [Function],
                "formats": Object {},
                "formatters": Object {
                  "getDateTimeFormat": [Function],
                  "getMessageFormat": [Function],
                  "getNumberFormat": [Function],
                  "getPluralFormat": [Function],
                  "getRelativeFormat": [Function],
                },
                "locale": "en",
                "messages": null,
                "now": [Function],
                "onError": [Function],
                "textComponent": "span",
                "timeZone": null,
              }
            }
            isSingleLine={true}
            onSelectRollUp={[Function]}
            rollupCount={1}
          >
            <div
              className="pill-list-item"
              role="listitem"
            >
              <button
                className="roll-up-pill is-selectable"
                data-terra-rollup-pill={true}
                data-terra-rollup-pill-show-focus-styles={true}
                id="rollup-pill"
                onClick={[Function]}
                onKeyDown={[Function]}
                onMouseDown={[Function]}
                tabIndex="0"
                type="button"
              >
                <span
                  className="roll-up-pill-label"
                >
                  Terra.pills.label.rollupPill
                </span>
              </button>
            </div>
          </RollUpPill>
        </InjectIntl(RollUpPill)>
      </div>
    </ResponsiveElement>
  </SelectablePills>
</InjectIntl(SelectablePills)>
`;
